    -0.4.6: - configuration now with template dictionaries possible, device can consits only of template and start function, redvypr will use standard device and gui objects
            - cleanup of old interface (adding attributes to devices while initialization)
            - added process kill option
	-0.4.5: - Redesign of API, redvypr_device object as standard Device
			- Configuration of devices not longer as attributes but directly as a argument to __init__
	-0.4.4: - rawdatalogger, rawdatareplay, csvlogger (not usable yet)
	-0.4.3: - pyqtconsole added, plot gui nicer
	        - Reworked the datastream/devicename string nomenclature
			- major updates in basic functions as  device_in_data, parse_devicestring
			- new functions in redvypr as: get_datastreams, get_datakeys, get_known_devices
			- added local flag in hostinfo
	-0.4.2: - calibration heavily updated, save config feature in redvypr
	-0.4.1: - get_datastream
	-0.4.0: - migrated to redvypr.net;github.com/redvypr/redvypr
			- Added GUI functionality to change the loglevel
			- network device cleanup
			- added ce_sensors datalogger
			- recursive device import
	-0.3.12:- new icon/logo v0.3.1, started calibration device 
	-0.3.11:- netcdf tcp reconnection feature added, lets redvypr reconnect to a tcp host after the connection was closed 
	-0.3.10:- textlogger bugfix
	-0.3.9: - Improved text logger with dt_filename (create new file every dt_filename seconds) and gui
	-0.3.8: - small changes for stability
	-0.3.7: - changed own nmea parser to pynmea2, improved nmea parsing stability, more nmea setup options
	-0.3.6: - created files.py and gui.py to standardize widgets and files
	-0.3.5: - list option in the packet data, works with netcdf, plot and randdata 
	-0.3.4: - props option in the plotting routines available
	-0.3.3: - redvypr_devicelist_widget added and improved device/data selection in plot
	-0.3.2: - netCDF automatic group creation, massive device example added